--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "todolist-v1",
+  "name": "todolist",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": ""
   },
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "10.16"
+    "node": "10.0"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -18,5 +18,6 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.6.9"
   },
+  "devDependencies": {},
   "description": ""
 }
